--- a/DapperLearning/App.config
+++ b/DapperLearning/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="DapperLearning.Properties.Settings.SQLDatabase" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PostsManagement;Integrated Security=True;"
+        <add name="DapperLearning.Properties.Settings.SQLDatabase" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PostsManagement;Integrated Security=True;MultipleActiveResultSets=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
